Fixed headline not aligning to center when in newline

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a:hover, a:active {
 .headline {
     font-size: 40px;
     margin: 24px;
+    text-align: center;
 }
 
 .title {
